chore: Package updates and project cleanup
- Updated all npm dependencies to latest versions for security and compatibility
- Upgraded Node.js types to v24 for better type support
- Updated ESLint and related tools to latest versions
- Added test file for enhanced logging functionality
- Removed outdated documentation files (smartCmdContext.md, vsc-extension-quickstart.md)
- Version bump to 0.1.0 reflecting stable feature set

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "devboost",
   "displayName": "DevBoost",
   "description": "DevBoost is a Visual Studio Code extension built to supercharge developer productivity through AI-driven automation and workflow optimization. DevBoost streamlines repetitive coding tasks and lays the foundation for a suite of intelligent tools to enhance software development. Its current feature, SmartCmd, creates one-click buttons for common tasks, making workflows faster and more efficient.",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "publisher": "devboost",
   "engines": {
     "vscode": "^1.105.0"
@@ -133,14 +133,14 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.105.0",
     "@types/mocha": "^10.0.10",
-    "@types/node": "22.x",
+    "@types/node": "^24.9.2",
+    "@types/vscode": "^1.105.0",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
-    "eslint": "^9.36.0",
-    "typescript": "^5.9.3",
     "@vscode/test-cli": "^0.0.11",
-    "@vscode/test-electron": "^2.5.2"
+    "@vscode/test-electron": "^2.5.2",
+    "eslint": "^9.36.0",
+    "typescript": "^5.9.3"
   }
 }
