--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "devboost",
   "displayName": "DevBoost",
-  "description": "DevBoost is a Visual Studio Code extension built to supercharge developer productivity through AI-driven automation and workflow optimization. DevBoost streamlines repetitive coding tasks and lays the foundation for a suite of intelligent tools to enhance software development. Its current feature, SmartCmd, creates one-click buttons for common tasks, making workflows faster and more efficient.",
-  "version": "0.1.0",
+  "description": "DevBoost is a Visual Studio Code extension built to supercharge developer productivity through AI-driven automation and workflow optimization. Features include SmartCmd for one-click automation buttons, Prompt Enhancer for improving AI interactions (like Webex rewrite message), and intelligent activity logging for better AI suggestions.",
+  "version": "0.2.0",
   "publisher": "devboost",
   "engines": {
     "vscode": "^1.105.0"
@@ -27,9 +27,14 @@
     "views": {
       "devboost-sidebar": [
         {
-          "id": "devboost.buttonsView",
-          "name": "DevBoost",
-          "icon": "$(rocket)"
+          "id": "devboost.smartCmdView",
+          "name": "SmartCmd",
+          "icon": "$(terminal)"
+        },
+        {
+          "id": "devboost.promptEnhancerView",
+          "name": "Prompt Enhancer",
+          "icon": "$(sparkle)"
         }
       ]
     },
@@ -41,6 +46,11 @@
       {
         "command": "devboost.smartCmdCreateButtons",
         "title": "SmartCmd: Create AI Suggested Buttons for this workspace",
+        "icon": "$(sparkle)"
+      },
+      {
+        "command": "devboost.smartCmdCreateButtonsEnhanced",
+        "title": "SmartCmd: Create Enhanced AI Suggested Buttons",
         "icon": "$(sparkle)"
       },
       {
@@ -77,48 +87,90 @@
         "command": "devboost.addToGlobal",
         "title": "Add to Global Buttons",
         "icon": "$(globe)"
+      },
+      {
+        "command": "devboost.showPromptEnhancer",
+        "title": "DevBoost: Show Prompt Enhancer",
+        "icon": "$(sparkle)"
+      },
+      {
+        "command": "devboost.quickEnhance",
+        "title": "DevBoost: Quick Enhance from Clipboard",
+        "icon": "$(zap)"
+      },
+      {
+        "command": "devboost.enhancePromptFromInput",
+        "title": "DevBoost: Enhance Prompt from Input",
+        "icon": "$(sparkle)"
       }
     ],
     "menus": {
-      "view/item/context": [
+      "commandPalette": [
+        {
+          "command": "devboost.showPromptEnhancer"
+        }
+      ],
+      "view/title": [
         {
           "command": "devboost.smartCmdCreateButtons",
-          "when": "view == devboost.buttonsView && viewItem == smartcmd",
-          "group": "inline@1"
+          "when": "view == devboost.smartCmdView",
+          "group": "navigation@1"
         },
         {
           "command": "devboost.smartCmdCreateCustomButton",
-          "when": "view == devboost.buttonsView && viewItem == smartcmd",
-          "group": "inline@2"
+          "when": "view == devboost.smartCmdView",
+          "group": "navigation@2"
         },
         {
           "command": "devboost.refreshButtons",
-          "when": "view == devboost.buttonsView && viewItem == smartcmd",
+          "when": "view == devboost.smartCmdView",
+          "group": "navigation@3"
+        }
+      ],
+      "view/item/context": [
+        {
+          "command": "devboost.smartCmdCreateButtons",
+          "when": "view == devboost.smartCmdView && viewItem == smartcmd",
+          "group": "inline@1"
+        },
+        {
+          "command": "devboost.smartCmdCreateButtonsEnhanced",
+          "when": "view == devboost.smartCmdView && viewItem == smartcmd",
+          "group": "inline@2"
+        },
+        {
+          "command": "devboost.smartCmdCreateCustomButton",
+          "when": "view == devboost.smartCmdView && viewItem == smartcmd",
           "group": "inline@3"
         },
         {
+          "command": "devboost.refreshButtons",
+          "when": "view == devboost.smartCmdView && viewItem == smartcmd",
+          "group": "inline@4"
+        },
+        {
           "command": "devboost.openButtonsFile",
-          "when": "view == devboost.buttonsView && viewItem == section",
+          "when": "view == devboost.smartCmdView && viewItem == section",
           "group": "inline@1"
         },
         {
           "command": "devboost.smartCmdCreateCustomButton",
-          "when": "view == devboost.buttonsView && viewItem == section",
+          "when": "view == devboost.smartCmdView && viewItem == section",
           "group": "inline@2"
         },
         {
           "command": "devboost.editButton",
-          "when": "view == devboost.buttonsView && viewItem =~ /Button$/",
+          "when": "view == devboost.smartCmdView && viewItem =~ /Button$/",
           "group": "1_modify@1"
         },
         {
           "command": "devboost.addToGlobal",
-          "when": "view == devboost.buttonsView && viewItem == workspaceButton",
+          "when": "view == devboost.smartCmdView && viewItem == workspaceButton",
           "group": "1_modify@2"
         },
         {
           "command": "devboost.deleteButton",
-          "when": "view == devboost.buttonsView && viewItem =~ /Button$/",
+          "when": "view == devboost.smartCmdView && viewItem =~ /Button$/",
           "group": "1_modify@3"
         }
       ]
