--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "devboostextension",
   "displayName": "DevBoost",
-  "description": "DevBoost is a Visual Studio Code extension built to supercharge developer productivity through AI-driven automation and workflow optimization. Features include SmartCmd for one-click automation buttons, Prompt Enhancer for improving AI interactions (like Webex rewrite message), and intelligent activity logging for better AI suggestions.",
-  "version": "0.4.4",
+  "description": "Boost your productivity through AI-driven tools.",
+  "version": "0.4.5",
   "publisher": "DevBoost",
   "repository": {
     "type": "git",
